Fixed: menu background not showing up

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ select {
     position: fixed;
     top: 0;
     left: 48%;
-    background: linear-gradient(to bottom, hsl(0, 100%, 1%, 1), hsl(0, 100% 1%, 0.0));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1.0), rgba(0, 0, 0, 0.0));
     display: flex;
     align-items: center;
     justify-content: center;
